--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ form {
 }
 
 input[type="text"] {
-  border: 2px solid rgb(29, 70, 253);
+  border: 2px solid #1d7efd;
   border-radius: 3px;
   padding: 0.3rem;
   margin: 0.3rem;
@@ -61,6 +61,10 @@ input[type="text"] {
   background-color: #fff;
 }
 
+.comment .comment {
+  background-color: inherit;
+}
+
 @keyframes fade-in {
   0% {
     background-color: rgb(248, 196, 100);
@@ -70,14 +74,33 @@ input[type="text"] {
   }
 }
 
+@keyframes fade-out {
+  0% {
+    background-color: white;
+    opacity: 1;
+  }
+  100% {
+    background-color: rgb(253, 82, 70);
+    opacity: 0;
+  }
+}
+
 .comment p {
   margin: 2px;
 }
 
-.comment button {
+.comment .reply-btn {
   background: none;
   border: none;
   color: rgb(3, 3, 221);
+  cursor: pointer;
+  font-size: 0.75rem;
+}
+
+.comment .delete-btn {
+  background: none;
+  border: none;
+  color: rgb(243, 50, 2);
   cursor: pointer;
   font-size: 0.75rem;
 }
@@ -90,7 +113,7 @@ input[type="text"] {
 }
 
 .comment .replies {
-  width: 90%;
+  width: 95%;
   margin-left: 5%;
   font-size: 0.9rem;
   margin-top: 0.7rem;
