--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ input[type="text"] {
   background-color: inherit;
 }
 
+.comment:hover {
+  box-shadow: 3px 3px 5px #adadad;
+}
+
 @keyframes fade-in {
   0% {
     background-color: rgb(248, 196, 100);
